# tmsocial

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
admin-server/: Pipfile  README.md  admin.py  config.py
admin-server/templates/: terminal.html
admin-server/views/: user.py
angular-web-ui/: package-lock.json  package.json
angular-web-ui/src/: index.html  karma.conf.js
autodb/: Cargo.toml
autodb/src/: lib.rs
migrations/2019-03-08-174624_terry_tasks/: up.sql
migrations/2019-03-08-200854_create_subtask/: down.sql  up.sql
migrations/2019-03-09-161438_missing_user_in_submissions/: down.sql  up.sql
migrations/2019-03-09-221439_various_fixes/: down.sql  up.sql
migrations/2019-03-10-204503_fix_wrong_unique_index/: up.sql
migrations/2019-03-10-215152_add_token_to_user/: up.sql
migrations/2019-03-11-181223_testcase_result_num_not_null/: up.sql
server/: .gitignore  api.graphql  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
server/src/: api-loader.d.ts  api-loader.js  api.graphql  index.ts  nodes.spec.ts  nodes.ts  resolvers.ts  tail.d.ts
src/: evaluation.rs  events.rs  lib.rs  models.rs  schema.patch  schema.rs  test_utils.rs
task_maker_wrapper/: adapter.py  cli.py  common.py  contest.py  metadata.py  statement.py  tm_test_server.py  user.py
task_web_ui/: package-lock.json  package.json  tsconfig.json
tmsocial-rust/: .env.sample  Cargo.toml  README.md
web/: index.html
web_ui/: .gitignore  README.md  angular.json  apollo.config.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+163 files in other folders)
