[package]
name = "tmsocial"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>", "Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
actix = "0.7.9"
fs_extra = "1.1.0"
tokio-process = "0.2.3"
structopt = "0.2.14"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
failure = "0.1.3"
itertools = "0.8"
actix-web = "0.7.17"
listenfd = "0.3.3"
futures = "0.1.25"
url = "1.7.2"
log = "0.4.6"
pretty_env_logger = "0.3.0"
rand = "0.6.1"
base64 = "0.10.0"