[package]
name = "autodb"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.82"
log = { version = "0.4.6", features = ["release_max_level_info"] }
pretty_env_logger = "0.3.0"
atomicwrites = "0.2.2"
serde_json = "1.0.33"
failure = "0.1.3"
tempdir = "0.3.7"
